--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "sonner-next-intl",
+  "name": "sonner-next-intl-root",
   "private": true,
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "changesets": "pnpm dlx @changesets/cli"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
@@ -16,5 +17,8 @@
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.29.8"
   }
 }
