--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,28 +1,24 @@
 {
   "name": "docs",
-  "version": "0.1.0",
   "type": "module",
-  "private": true,
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev --port 3001",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint --max-warnings 0",
-    "check-types": "next typegen && tsc --noEmit"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
-    "next": "^16.0.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "@types/node": "^22.15.3",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "eslint": "^9.39.1",
-    "typescript": "5.9.2"
+    "@astrojs/starlight": "^0.37.0",
+    "astro": "^5.6.1",
+    "sharp": "^0.34.2",
+    "starlight-package-managers": "^0.11.1",
+    "starlight-page-actions": "^0.2.0",
+    "starlight-sidebar-topics": "^0.6.2",
+    "starlight-theme-next": "^0.3.3",
+    "starlight-typedoc": "^0.21.5",
+    "typedoc": "^0.28.15",
+    "typedoc-plugin-markdown": "^4.9.0"
   }
 }
