--- a/packages/sonner-next-intl/package.json
+++ b/packages/sonner-next-intl/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sonner-next-intl",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -31,9 +31,9 @@
   ],
   "peerDependencies": {
     "next-intl": "^4.5.6",
-    "sonner": "^2.0.7",
     "react": ">=18.2.0 <20.0.0",
-    "react-dom": ">=18.2.0 <20.0.0"
+    "react-dom": ">=18.2.0 <20.0.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
